--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/lab": "5.0.0-alpha.84",
     "@mui/material": "5.8.2",
     "@mui/styles": "5.8.0",
+    "@react-google-maps/api": "^2.19.3",
     "@types/react": "17.0.40",
     "@types/react-dom": "17.0.13",
+    "@types/react-places-autocomplete": "^7.2.14",
     "apexcharts": "3.35.3",
     "axios": "^1.6.7",
     "clsx": "1.1.1",
@@ -31,6 +33,7 @@
     "react-custom-scrollbars-2": "4.4.0",
     "react-dom": "17.0.2",
     "react-helmet-async": "1.3.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-router": "6.3.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
